# qthealth

./: .gitignore  CMakeLists.txt  README.md
LICENSES/: BSD-3-Clause.txt
examples/: CMakeLists.txt
examples/ios/: CMakeLists.txt  Info.plist.in  Launch.storyboard  Launch.storyboard.license  WorkoutDetail.qml  WorkoutList.qml  iosExample.entitlements  main.cpp  main.qml
src/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/healthkit/: CMakeLists.txt  qthealthpluginhealthkit.h  qthealthpluginhealthkit.mm
src/qthealth/: CMakeLists.txt  qhealthdata.cpp  qhealthdata.h  qhealthgeodata.cpp  qhealthgeodata.h  qhealthprovider.cpp  qhealthprovider.h  qhealthquery.cpp  qhealthquery.h  qhealthvalue.cpp  qhealthvalue.h  qhealthvaluedata.cpp  qhealthvaluedata.h  qhealthworkout.cpp  qhealthworkout.h  qthealthplugininterface.h
src/qthealthqml/: CMakeLists.txt  qml.h
